Adicionando mais dois refatoramentos.